testing with_items with 1 config file copy

--- a/task_tester.yml
+++ b/task_tester.yml
@@ -14,5 +14,6 @@
         mode: '0644'
       with_items: 
         - { src: files/info.php, dest: "/var/www/" }
+        - "{{ app_username }}"
 
 
