--- a/task_tester.yml
+++ b/task_tester.yml
@@ -6,11 +6,11 @@
   vars_files:
     - vars/main.yml
   vars:
-    - file_src: "files/info.php"
-    - file_dest: "/var/www/{{ user_list }}"
-    - app_username:
+    app_username:
         - user: app1
         - user: app2
+    file_src: "files/info.php"
+    file_dest: "/var/www/{{ item.user }}"
 
   tasks:
     - name: Copy test php page to app directory
@@ -18,6 +18,7 @@
         src: "{{ file_src }}"
         dest: "{{ file_dest }}"
         mode: '0644'
+
       
 
 
