trying an alternative approach to copy conf files

--- a/task_tester.yml
+++ b/task_tester.yml
@@ -6,9 +6,6 @@
   vars_files:
     - vars/main.yml
   vars:
-    app_username:
-        - user: app1
-        - user: app2
     file_src: "files/info.php"
     file_dest: "/var/www/{{ php_version }}"
 
@@ -18,6 +15,7 @@
         src: "{{ file_src }}"
         dest: "{{ file_dest }}"
         mode: '0644'
+      loop: "{{ app_username }}"
 
       
 
