--- a/task_tester.yml
+++ b/task_tester.yml
@@ -20,14 +20,13 @@
   tasks:
     - name: Copy test php page to app directory
       ansible.builtin.template:
-        src: "{{ file_src }}"
-        dest: "{{ file_dest }}"
+        src: "{{ file_paths['file_src'] }}"
+        dest: "{{ file_paths['file_dest'] }}"
         mode: '0644'
         owner: "{{ item.file_owner }}"
-      loop: 
-        - "{{ app_username }}"
-        - "{{ file_paths }}"
-      # loop: [ "{{ app_username }}","{{ file_paths }}" ]
+      loop: "{{ app_username }}"
+         
+
 
       
 
