single file copy worked with loop, trying 3

--- a/task_tester.yml
+++ b/task_tester.yml
@@ -7,9 +7,9 @@
     - vars/main.yml
   vars:
     file_paths:
-      - file_src: "files/info.php"
-      - file_src: "files/fpm.conf.j2"
-      - file_src: "files/http.conf.j2"
+      - file_src: "templates/info.php"
+      - file_src: "templates/fpm.conf.j2"
+      - file_src: "templates/http.conf.j2"
       - file_dest: "/var/www/{{ item.user }}/"
         file_owner: "{{ item.user }}"
       - file_dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ item.user }}.conf"
