--- a/php_app_config.yml
+++ b/php_app_config.yml
@@ -7,37 +7,36 @@
     - vars/main.yml
   
   tasks:
-    - name: Create /srv/users/ directory
-      ansible.builtin.file:
-        path: "/srv/users/{{ item }}"
-        owner: root
-        mode: '0755'
-        state: directory
-      loop: "{{ user_list }}"
+    # - name: Create /srv/users/ directory 
+    #   ansible.builtin.file:
+    #     path: "/srv/users/{{ item }}"
+    #     owner: root
+    #     mode: '0755'
+    #     state: directory
+    #   loop: "{{ user_list }}"
 
-    - name: Create app user 
+    - name: Create app user ## issue with dir perms [0750]
       ansible.builtin.user:
-        name: "{{ item }}"
+        name: "{{ item.user }}"
         create_home: true
-        home: "/srv/users/{{ item }}"
-      loop: "{{ user_list }}"
+        home: "/srv/users/{{ item.user }}"
+      with_items: "{{ app_username }}"
 
-    - name: Add user www-data to app users' group
+    - name: Add user www-data to app users' group ## issue only adds app2 group
       ansible.builtin.user:
         name: www-data
-        groups: "{{ user_list }}"
-        append: true 
+        groups: "{{ item.user }}"
+      with_items: "{{ app_username }}" 
 
     - name: Create app directories
       ansible.builtin.file:
-        path: "{{ item[2] }}/{{ item[0] }}"
+        path: "{{ item[1] }}/{{ item[0] }}"
         owner: "{{ item[0] }}"
         group: "{{ item[0] }}"
-        mode: "{{ item[1] }}"
+        mode: '0700'
         state: directory
       with_nested:
         - "{{ user_list }}"
-        - [ '0700' ]
         - [ '/var/log/php-fpm/','/var/lib/php/sessions/','/var/www/' ]
 
     - name: Change /var/www directory permissions
@@ -61,14 +60,11 @@
 
     - name: Copy configuration files to server using templates.
       ansible.builtin.template:
-        src: "{{ item.src }}"
-        dest: "{{ item.dest }}"
-        owner: "{{ item.owner }}"
+        src: 'templates/info.php'
+        dest: "/var/www/{{ item.user }}/"
+        owner: "{{ item.user }}"
         mode: 0644
-      with_items:
-        - { src: "files/info.php", dest: "/var/www/{{ user_list }}/", owner: "{{ user_list }}" }
-        - { src: "files/fpm.conf.j2", dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ user_list }}.conf", owner: "root" }
-        - { src: "files/http.conf.j2", dest: "/etc/nginx/sites-available/{{ user_list }}-http.conf", owner: "root" }
+      loop: "{{ app_username }}"
 
     - name: Copy configuration files to server using templates.
       ansible.builtin.template:
