--- a/task_tester.yml
+++ b/task_tester.yml
@@ -9,12 +9,14 @@
   tasks:
     - name: Copy configuration files to server using templates.
       ansible.builtin.template:
-        src: 'templates/info.php'
-        dest: "/var/www/{{ item.user }}/"
-        owner: "{{ item.user }}"
+        src: "{{ item[1] }}"
+        dest: "{{ item[2] }}"
+        owner: "{{ item[0] }}"
         mode: 0644
-      loop: "{{ app_username }}"
-
+      with_nested:
+        - [ "{{ app_username }}" ]
+        - [ 'templates/test.php','templates/fpm.conf.j2','templates/http.conf.j2'  ]
+        - [ '/var/www/','/etc/php/{{ php_version }}/fpm/pool.d/.conf','/etc/nginx/sites-available/-http.conf' ]
 
   # vars:
   #   file_paths:
