--- a/task_tester.yml
+++ b/task_tester.yml
@@ -7,24 +7,27 @@
     - vars/main.yml
   
   tasks:
-    - name: Create user groups
-      ansible.builtin.group:
-        name: "{{ item.user }}"
-        state: present
-      loop: "{{ app_username }}"
+    # - name: Create user groups
+    #   ansible.builtin.group:
+    #     name: "{{ item.user }}"
+    #     state: present
+    #   loop: 
+    #     - "{{ app_username }}"
 
     - name: Create app user ## issue with dir perms [0750]
       ansible.builtin.user:
         name: "{{ item.user }}"
         create_home: true
         home: "/srv/users/{{ item.user }}"
-      loop: "{{ app_username }}"
+      loop: 
+        - "{{ app_username }}"
 
     - name: Add user www-data to app users' group ## issue only adds app2 group
       ansible.builtin.user:
         name: www-data
         groups: "{{ item.user }}"
-      loop: "{{ app_username }}" 
+      loop: 
+        - "{{ app_username }}" 
 
   # vars:
   #   file_paths:
