--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@
 stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
-vault_password_file = /home/$USER/.ansible/vault_pass.txt
+vault_password_file = ./vault_pass.txt
 
 inventory = ./inventory/hosts.yml
 
