testing adding www-data to app users

--- a/php_app_config.yml
+++ b/php_app_config.yml
@@ -19,6 +19,7 @@
       ansible.builtin.user:
         name: www-data
         groups: "{{ item.user }}"
+        append: yes
       with_items: 
         - "{{ app_username }}" 
 
