removed vault_pass, add www-data to app user now working

--- a/php_app_config.yml
+++ b/php_app_config.yml
@@ -15,7 +15,7 @@
       with_items: 
         - "{{ app_username }}"
 
-    - name: Add user www-data to app users' group ## issue only adds app2 group
+    - name: Add user www-data to app users' group
       ansible.builtin.user:
         name: www-data
         groups: "{{ item.user }}"
