--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,6 +1,6 @@
 all:
   hosts:
     ansible-test-server:
-      hostname: ansible-test-server-02
-      ansible_host: 178.79.128.9
+      hostname: ansible-test-server
+      ansible_host: 178.79.160.31
       ansible_port: 22
