--- a/php_app_config.yml
+++ b/php_app_config.yml
@@ -1,16 +1,13 @@
 ---
-- name: Playbook to configure a PHP app on a LEMP stack 
+- name: Playbook to configure a PHP app on a LEMP stack
   hosts: all
   remote_user: emmanuel.apreko
   become: true
   vars_files:
     - vars/main.yml
-  
+
   handlers:
-    - include_tasks: handlers/main.yml
-  
+    - ansible.builtin.import_tasks: handlers/main.yml
+    
   tasks:
-    - import_tasks: tasks/main.yml
-
- 
-
+    - ansible.builtin.import_tasks: tasks/main.yml
