changed fpm user and group to app user

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,7 @@
   ansible.builtin.user:
     name: www-data
     groups: "{{ item.user }}"
+    append: yes
   with_items:
     - "{{ app_username }}"
 
